Inheritance/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:38:46 **** Incremental Build of configuration Debug for project Multilevel Inheritance ****
make all 
Building file: ../multilevel.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"multilevel.d" -MT"multilevel.o" -o "multilevel.o" "../multilevel.cpp"
../multilevel.cpp: In function ‘int main()’:
../multilevel.cpp:66:26: error: expected ‘;’ before ‘stud1’
   66 |  stud1.get_number(1045);1
      |                          ^
      |                          ;
   67 |  stud1.get_marks(99, 92);
      |  ~~~~~                    
../multilevel.cpp:66:25: warning: statement has no effect [-Wunused-value]
   66 |  stud1.get_number(1045);1
      |                         ^
make: *** [subdir.mk:20: multilevel.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
14:38:51 **** Incremental Build of configuration Debug for project Multilevel Inheritance ****
make all 
Building file: ../multilevel.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"multilevel.d" -MT"multilevel.o" -o "multilevel.o" "../multilevel.cpp"
Finished building: ../multilevel.cpp
 
Building target: Multilevel Inheritance
Invoking: GCC C++ Linker
g++  -o "Multilevel Inheritance"  ./multilevel.o   
Finished building target: Multilevel Inheritance
 
